--- a/package.json
+++ b/package.json
@@ -3,9 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.20",
+    "apollo-cache-inmemory": "^1.3.9",
+    "apollo-link": "^1.2.3",
+    "apollo-link-context": "^1.0.9",
+    "apollo-link-http": "^1.5.5",
+    "graphql": "^0.11.7",
+    "moment": "^2.22.2",
     "react": "^16.6.1",
+    "react-apollo": "^2.1.3",
     "react-dom": "^16.6.1",
-    "react-scripts": "2.1.1"
+    "react-geocode": "^0.1.2",
+    "react-router": "^4.1.1",
+    "react-router-config": "^1.0.0-beta.3",
+    "react-router-dom": "^4.1.1",
+    "react-scripts": "2.1.1",
+    "semantic-ui-css": "2.2.10",
+    "semantic-ui-react": "0.78.3"
   },
   "scripts": {
     "start": "react-scripts start",
